src/objects/IQVIA_Agreement_Team__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field stores Id of associated IQVIA Agreement.</description>        
        <label>Agreement</label>
        <referenceTo>IQVIA_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Teams</relationshipLabel>
        <relationshipName>Agreement_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is a lookup to Contact.</description>        
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5)</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <valueField>$Source.Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <valueField>$Source.Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <value>IQVIA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement Teams</relationshipLabel>
        <relationshipName>Agreement_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to check whether contact is docusign recipient or not.</description>             
        <defaultValue>false</defaultValue>
        <label>DocuSign Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_Role__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field stores the Docusign role.</description>         
        <label>Docusign Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Legal Entity 1</fullName>
                </value>
                <value>
                    <fullName>Legal Entity 2</fullName>
                </value>
                <value>
                    <fullName>Legal Entity 3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to store contact's email.</description>             
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field indicates whether contact is active or not.</description>         
        <formula>Contact__r.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to store Contact's title.</description>             
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_URL__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to store contact link.</description>        
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field displays full name of the contact.</description>        
        <formula>Contact__r.FirstName &amp;&quot; &quot;&amp;Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field stores the phone number.</description>        
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to store the role.</description>        
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Analyst</fullName>
                </value>
                <value>
                    <fullName>Other Contract Analyst</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>CSS-CD Contract Analyst</fullName>
                </value>
                <value>
                    <fullName>IQVIA Project Manager</fullName>
                </value>
                <value>
                    <fullName>Additional Project Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Proposal Developer</fullName>
                </value>
                <value>
                    <fullName>Sales Operation</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Customer Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Contract Negotiator</fullName>
                </value>
                <value>
                    <fullName>Customer Contract Team Member</fullName>
                </value>
                <value>
                    <fullName>Customer Contract Reviewer</fullName>
                </value>
                <value>
                    <fullName>Customer Signatory</fullName>
                </value>
                <value>
                    <fullName>BD Representative</fullName>
                </value>
                <value>
                    <fullName>Contract Reviewer</fullName>
                </value>
                <value>
                    <fullName>Project Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Business Account Manager</fullName>
                </value>
                <value>
                    <fullName>Contract Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CLM-MC-CLMCMA-17944 - This field is used to store type of contact.</description>        
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>IQVIA User Contact</fullName>
                    <label>IQVIA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Team</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Agreement Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>